[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/svg_crate_red.svg" type="Texture" id=1]
[ext_resource path="res://Levels/starAnimation.gd" type="Script" id=2]
[ext_resource path="res://Objects/Electric.gd" type="Script" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.501587, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="starAnimation" type="Node2D"]
position = Vector2( 500, 500 )
script = ExtResource( 2 )
stars_texture = ExtResource( 1 )
rotation_time = 2.0
cycle_time = 3.0
fade_time = 2.0
radius_initial = 225.0
radius_final = 85.0
color_achieved = Color( 1, 1, 1, 1 )
color_unachieved = Color( 0.223529, 0.223529, 0.223529, 1 )
color_perfected = Color( 1, 1, 0.776471, 1 )

[node name="elec0" type="Node2D" parent="."]
script = ExtResource( 3 )
ending_position = Vector2( 225, 225 )
points = 14
line_width = 4.0
width = 0.258
curve = SubResource( 1 )

[node name="sprStar0" type="Sprite" parent="."]
modulate = Color( 0.988235, 1, 0.839216, 1 )
position = Vector2( 225, 225 )
rotation = 0.0571882
texture = ExtResource( 1 )

[node name="elec1" type="Node2D" parent="."]
script = ExtResource( 3 )
ending_position = Vector2( -307.356, 82.356 )
points = 14
line_width = 4.0
width = 0.258
curve = SubResource( 1 )

[node name="sprStar1" type="Sprite" parent="."]
modulate = Color( 0.988235, 1, 0.839216, 1 )
position = Vector2( -307.356, 82.3557 )
rotation = 0.0571882
texture = ExtResource( 1 )

[node name="elec2" type="Node2D" parent="."]
script = ExtResource( 3 )
ending_position = Vector2( 82.356, -307.356 )
points = 14
line_width = 4.0
width = 0.258
curve = SubResource( 1 )

[node name="sprStar2" type="Sprite" parent="."]
modulate = Color( 0.988235, 1, 0.839216, 1 )
position = Vector2( 82.3557, -307.356 )
rotation = 0.0571882
texture = ExtResource( 1 )

[node name="twnRotation" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="twnFade" type="Tween" parent="."]

[node name="twnCycle" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="twnRadius" type="Tween" parent="."]
[connection signal="tween_started" from="twnFade" to="." method="_on_twnFade_tween_started"]
